version 7.0.0 and plugins